--- a/index.html
+++ b/index.html
@@ -10,24 +10,41 @@
     <script src="colourPalette.js"></script>
     <script src="helperFunctions.js"></script>
 
+    <script src="eraserTool.js"></script>
     <script src="freehandTool.js"></script>
     <script src="lineToTool.js"></script>
     <script src="mirrorDrawTool.js"></script>
     <script src="sprayCanTool.js"></script>
+    <script src="shapesTool.js"></script>
+    <script src="rainbowBrush.js"></script>
+    <script src="textTool.js"></script>
+    <script src="calligraphyTool.js"></script>
+    <script src="shapeStampTool.js"></script>
+    <script src="highlighterTool.js"></script>
+    <script src="starBrushTool.js"></script>
+    <script src="noteStampTool.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
   	<div class="wrapper">
-      <div class="box header">My Drawing App
+      <div class="box header">Quick Draw App
 
         <button id="clearButton">Clear</button>
         <button id="saveImageButton">Save Image</button>
+
+        <div id="sliderContainer"></div>
+        <div id="textToolContainer"></div>
+        <button id="gridButton">Grid</button>
       </div>
       <div class="box" id="sidebar"></div>
       <div id="content"></div>
       <div class="box colourPalette"></div>
-      <div class="box options"></div>
+      <div class="box options">
+        <div id="permanentOptions"></div>
+        <div id="toolSpecificOptions"></div>
+      </div>
+
 	</div>
   </body>
 </html>
